// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppThemedTextInput Tests renders correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#151718",
      },
      [
        {
          "alignItems": "center",
          "borderColor": "#ccc",
          "borderRadius": 10.714285714285714,
          "borderWidth": 2.142857142857143,
          "flexDirection": "row",
          "marginBottom": 21.428571428571427,
          "paddingHorizontal": 21.428571428571427,
          "width": "80%",
        },
        undefined,
      ],
    ]
  }
>
  <TextInput
    onBlur={[Function]}
    onChangeText={[Function]}
    placeholder="Snapshot test!"
    placeholderTextColor="#999"
    secureTextEntry={false}
    style={
      [
        {
          "flex": 1,
          "padding": 21.428571428571427,
        },
        {
          "backgroundColor": "#151718",
          "color": undefined,
        },
        undefined,
      ]
    }
    value=""
  />
</View>
`;

exports[`AppThemedTextInput Tests renders correctly with dark theme 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#000000",
      },
      [
        {
          "alignItems": "center",
          "borderColor": "#ccc",
          "borderRadius": 10.714285714285714,
          "borderWidth": 2.142857142857143,
          "flexDirection": "row",
          "marginBottom": 21.428571428571427,
          "paddingHorizontal": 21.428571428571427,
          "width": "80%",
        },
        undefined,
      ],
    ]
  }
>
  <TextInput
    onBlur={[Function]}
    onChangeText={[Function]}
    placeholder="Snapshot test!"
    placeholderTextColor="#999"
    secureTextEntry={false}
    style={
      [
        {
          "flex": 1,
          "padding": 21.428571428571427,
        },
        {
          "backgroundColor": "#000000",
          "color": "#000000",
        },
        undefined,
      ]
    }
    value=""
  />
</View>
`;

exports[`AppThemedTextInput Tests renders correctly with light theme 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
      },
      [
        {
          "alignItems": "center",
          "borderColor": "#ccc",
          "borderRadius": 10.714285714285714,
          "borderWidth": 2.142857142857143,
          "flexDirection": "row",
          "marginBottom": 21.428571428571427,
          "paddingHorizontal": 21.428571428571427,
          "width": "80%",
        },
        undefined,
      ],
    ]
  }
>
  <TextInput
    onBlur={[Function]}
    onChangeText={[Function]}
    placeholder="Snapshot test!"
    placeholderTextColor="#999"
    secureTextEntry={false}
    style={
      [
        {
          "flex": 1,
          "padding": 21.428571428571427,
        },
        {
          "backgroundColor": "#ffffff",
          "color": "#ffffff",
        },
        undefined,
      ]
    }
    value=""
  />
</View>
`;
